force-app/main/default/objects/SFDC2GT_Xml_Stucture__c/SFDC2GT_Xml_Stucture__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SFDC to GT Xml Stucture</label>
</CustomObject>