force-app/main/default/objects/SFDC2GT_Xml_Stucture__c/fields/Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Default_Value__c</fullName>
    <label>Default Value</label>
    <length>30</length>
    <type>Text</type>
</CustomField>