force-app/main/default/objects/SFDC2GT_Xml_Stucture__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <label>Field_Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>