force-app/main/default/objects/SFDC2GT_Xml_Stucture__c/fields/Message_Code__c.field-meta.xml
<CustomField>
    <fullName>Message_Code__c</fullName>
    <description>Indicates message that given node is part of</description>
    <label>Message Code</label>
    <length>5</length>
    <required>true</required>
    <type>Text</type>
</CustomField>