force-app/main/default/objects/SFDC2GT_Xml_Stucture__c/fields/Node_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Node_Item_Name__c</fullName>
    <label>Node Item Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>