force-app/main/default/objects/SFDC2GT_Xml_Stucture__c/fields/Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_Name__c</fullName>
    <label>Object_Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>